--- a/timeline-service/src/main/resources/application.properties
+++ b/timeline-service/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.datasource.url=jdbc:oracle:thin:@db202204291622_high?TNS_ADMIN=/Users/namrathakamath/Documents/Java/Timeline-service/Wallet_DB202204291622
+spring.datasource.url=jdbc:oracle:thin:@db202204291622_high?TNS_ADMIN=/home/ubuntu/wallet
 spring.datasource.username=admin
 spring.datasource.password=Newsfeed@2022  
 spring.datasource.driver-class-name: oracle.jdbc.OracleDriver
-spring.datasource.oracleucp.min-pool-size=5
-spring.datasource.oracleucp.max-pool-size=15
 jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
