--- a/timeline-service/src/main/resources/application.properties
+++ b/timeline-service/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=Newsfeed@2022
 spring.datasource.driver-class-name: oracle.jdbc.OracleDriver
 jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.datasource.maxActive=50
